# ai-tutor

./: .env.example  .gitignore  README.md  SKILL.md  ai-setup.md  appstart.md  docker-compose.yml  setupdb.md  stop.sh
backend/: README.md  pom.xml
backend/src/main/java/com/aitutor/api/: AiTutorApplication.java
backend/src/main/java/com/aitutor/api/assignment/: Assignment.java  AssignmentAsset.java  AssignmentAssetRepository.java  AssignmentController.java  AssignmentDtos.java  AssignmentPlanStep.java  AssignmentPlanStepRepository.java  AssignmentRepository.java  AssignmentService.java  AssignmentStatus.java
backend/src/main/java/com/aitutor/api/auth/: AuthController.java  AuthDtos.java  AuthService.java  AuthenticatedStudent.java  Student.java  StudentRepository.java  StudentSessionToken.java  StudentSessionTokenRepository.java  TokenAuthenticationFilter.java
backend/src/main/java/com/aitutor/api/common/: ApiErrorHandler.java  ApiRequestLoggingFilter.java  CurrentStudent.java
backend/src/main/java/com/aitutor/api/config/: AiTutorProperties.java  AppConfig.java  AppConstants.java  SecurityConfig.java
backend/src/main/resources/: application.yml
docs/: ai-tutor-prd.md  architecture-diagram.md
mobile/: App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.json
mobile/src/: api.ts
workers/ai_worker/: README.md  pyproject.toml
workers/ai_worker/ai_tutor_worker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
workers/ai_worker/app/: analysis.py  main.py  ollama_analysis.py  openai_analysis.py  schemas.py  settings.py
(+31 files in other folders)
